tests/disallow-duplicate-service-accounts/resources/deployment-two.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-two
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: nginx
          image: nginx
      serviceAccountName: duplicate-service-account
