tests/disallow-duplicate-service-accounts/resources/service-account.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: duplicate-service-account
