tests/disallow-duplicate-service-accounts/assert-resources.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: duplicate-service-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-one
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: nginx
      serviceAccountName: duplicate-service-account
